--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "db-dtypes>=1.4.4",
+    "google-cloud-bigquery>=3.38.0",
+    "pandas>=2.3.3",
+    "pandas-gbq>=0.31.0",
+    "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
+]
